Bug 727163 - fix compiler warnings in accessible/; r=askalski